--- a/CSS/style5.css
+++ b/CSS/style5.css
@@ -1,6 +1,7 @@
 *{
   margin: 0;  
   padding: 0;
+  box-sizing: border-box;
 }
 .box-1{
     /*margin: 50px 30px 10px;*/
@@ -8,8 +9,19 @@
     margin-top: 50px;
     margin-right: 30px;*/
     background: #a7a7a7;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-
+    width: 500px;
+    height: 200px;
+    margin-left: 30px;
+    margin-right: 30px;
+    border: 5px dotted black;
+    padding: 20px 20px;
+}
+.box-2{
+  background: #b65050;
+    width: 500px;
+    height: 200px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 100px;
+    border: 5px solid blue;
 }
